--- a/Apps/FireflyWindows/FireflyWindows/FireflyWindows.csproj
+++ b/Apps/FireflyWindows/FireflyWindows/FireflyWindows.csproj
@@ -56,6 +56,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FireCommands.cs" />
+    <Compile Include="FiringPatterns.cs" />
     <Compile Include="Tube.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
