--- a/Apps/FireflyWindows/FireflyWindows/FireflyWindows.csproj
+++ b/Apps/FireflyWindows/FireflyWindows/FireflyWindows.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Fireworks.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -102,6 +105,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="fireworks.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Fireworks.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
