--- a/.gitignore
+++ b/.gitignore
@@ -212,59 +212,9 @@ $RECYCLE.BIN/
 # Mac
 .DS_Store
 
-Src/PrtDist/Samples/PingPong/program.c
-Src/PrtDist/Binaries/clusterconfiguration.xml
 *.idb
-Src/PrtDist/Samples/PingPong/PingPong.zing
-Src/PrtDist/Samples/PingPong/stubs.c
-Src/PrtDist/Samples/PingPong/program.h
-/Ext/PsTools
-/Src/Prt/Samples/ForeignTypes/Tester.ipdb
-/Src/Prt/Samples/ForeignTypes/Tester.iobj
-/Src/Prt/Samples/ForeignTypes/Tester.exe
-/Src/Prt/Samples/ForeignTypes/stubs.c
-/Src/Prt/Samples/ForeignTypes/program.h
-/Src/Prt/Samples/ForeignTypes/program.c
-/Src/Prt/Samples/ForeignTypes/ForeignStringType.zing
-/Src/Prt/Samples/ForeignTypes/ForeignStringType.dll
-/Src/PrtDist/Samples/PingPongSimple/PRT_CONTAINER_LOG_1.txt
-/Src/PrtDist/Samples/PingPongSimple/test.zing
-/Src/PrtDist/Samples/PingPongSimple/test.dll
-/Src/PrtDist/Samples/PingPongSimple/stubs.c
-/Src/PrtDist/Samples/PingPongSimple/program.h
-/Src/PrtDist/Samples/PingPongSimple/program.c
-/Src/Prt/Samples/ModelFnAndMachines/stubs.c
-/Src/Prt/Samples/ModelFnAndMachines/ServerClient.zing
-/Src/Prt/Samples/ModelFnAndMachines/ServerClient.dll
-/Src/Prt/Samples/ModelFnAndMachines/program.h
-/Src/Prt/Samples/ModelFnAndMachines/program.c
-/Src/PrtDist/Samples/TechFest2015-Demo/stubs.c
-/Src/PrtDist/Samples/TechFest2015-Demo/program.h
-/Src/PrtDist/Samples/TechFest2015-Demo/program.c
-/Src/PrtDist/Samples/TechFest2015-Demo/Driver.zing
-/Src/PrtDist/Samples/TechFest2015-Demo/Driver.dll
-/Src/PrtDist/Samples/TechFest2015-Demo
-/Src/PrtDist/Samples/PingPong/PingPong.dll
-/Tst/tempReset.txt
-/Tst/one.txt
-/Tst/failed-tests-for-reset.txt
-/Src/Prt/Samples/ForeignTypes/ForeignStringType.h
-/Src/Prt/Samples/ForeignTypes/ForeignStringType.c
-/Src/Prt/Samples/ModelFnAndMachines/ServerClient.h
-/Src/Prt/Samples/ModelFnAndMachines/ServerClient.c
-/Src/PrtDist/Samples/PingPong/PingPong.h
-/Src/PrtDist/Samples/PingPong/PingPong.c
-/Src/PrtDist/Samples/PingPongSimple/test.h
-/Src/PrtDist/Samples/PingPongSimple/Test.c
-/Src/PrtDist/Samples/PingPongSimple/Test.c
-/Src/Tools/VSEditorExtensions/packages
 /.vs/
-/P.VC.db
-/Src/PrtDist/Samples/PingPongFast/test.dll
-/Src/PrtDist/Samples/PingPongFast/test.zing
-/Src/PrtDist/Samples/PingPongFast/test.h
-/Src/PrtDist/Samples/PingPongFast/test.c
-/Src/PrtDist/Samples/PingPongFast/stubs.c
-/Tst/PrtTester/Tester.VC.db
-/Bld/PRT_CONTAINER_LOG_1.txt
-/Apps/FireflyWindows/FireflyWindows.VC.db
+*.VC.db
+
+sdkconfig
+sdkconfig.old
