--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/FireflyWindowsUniversal.csproj
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/FireflyWindowsUniversal.csproj
@@ -95,8 +95,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FireflyHub.cs" />
-    <Compile Include="HubLocator.cs" />
+    <Compile Include="Networking\FireflyHub.cs" />
+    <Compile Include="Networking\FireflyHubLocator.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
