--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/FireflyWindowsUniversal.csproj
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/FireflyWindowsUniversal.csproj
@@ -103,6 +103,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Networking\FireflyMessage.cs" />
     <Compile Include="Networking\Message.cs" />
     <Compile Include="Networking\TcpMessageStream.cs" />
     <Compile Include="Networking\UdpMessageStream.cs" />
