--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/project.lock.json
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/project.lock.json
@@ -1,5 +1,4 @@
 {
-  "locked": false,
   "version": 2,
   "targets": {
     "UAP,Version=v10.0": {
@@ -15500,5 +15499,10 @@
       "Microsoft.NETCore.UniversalWindowsPlatform >= 5.1.0"
     ],
     "UAP,Version=v10.0": []
+  },
+  "tools": {},
+  "projectFileToolGroups": {},
+  "packageFolders": {
+    "C:\\Users\\clovett\\.nuget\\packages\\": {}
   }
 }
